@@ -14,6 +14,7 @@ usr/bin/grub-mkimage
 usr/bin/grub-mklayout
 usr/bin/grub-mkpasswd-pbkdf2
 usr/bin/grub-mkrelpath
+usr/bin/grub-mount
 usr/bin/grub-script-check
 usr/lib/grub/grub-mkconfig_lib
 usr/lib/grub/update-grub_lib
@@ -31,6 +32,7 @@ usr/share/man/man1/grub-mkimage.1
 usr/share/man/man1/grub-mklayout.1
 usr/share/man/man1/grub-mkpasswd-pbkdf2.1
 usr/share/man/man1/grub-mkrelpath.1
+usr/share/man/man1/grub-mount.1
 usr/share/man/man1/grub-script-check.1
 usr/share/man/man8/grub-mkconfig.8
 usr/share/man/man8/grub-mkdevicemap.8
