@@ -1,2 +1,0 @@
-usr/bin/grub-mount
-usr/share/man/man1/grub-mount.1
