@@ -8,7 +8,10 @@ grub2 (1.99-9) UNRELEASED; urgency=low
   [ Debconf translations ]
   * Esperanto (Felipe E. F. de Castro).  Closes: #632157
 
- -- Colin Watson <cjwatson@debian.org>  Wed, 22 Jun 2011 16:55:06 +0100
+  [ Robert Millan ]
+  * Enable grub-mount on kfreebsd-any.
+
+ -- Robert Millan <rmh@debian.org>  Sun, 10 Jul 2011 22:34:46 +0200
 
 grub2 (1.99-8) unstable; urgency=low
 
